--- a/index.html
+++ b/index.html
@@ -739,7 +739,7 @@ body {
   </div>
 
   <div class="redirect-button">
-    <a href="https://pump.fun" target="_blank">
+    <a href="https://pump.fun/coin/HbNu9BRt48V5VFRfRdCbNtzcTtbr9CcPhUJXiv8epump" target="_blank">
       <img src="pump.png" alt="Pump Fun">
     </a>
   </div>
